# instrumental_edm_catalog_v3_clean

./: .gitignore  AGENTS.md  PIPELINE.md  README.md  RUNBOOK.md  SHA256SUMS.txt  instrumental_edm_catalog_v3_clean.xlsx  musiccrawl.py  pyproject.toml  requirements-pipeline.txt
catalog/: hydration_overrides.csv  playlist_first37_status.csv  selection.csv  selection.ndjson  source_summary.csv  validation_report.json
config/: sources.csv
configs/: annotation_schema.json  download_acestep_models.sh  download_inference_lm_to_ram.sh  preprocess_2x4090.sh  setup_server.sh  taxonomy.json  train_2x4090.sh  train_smoke_2x4090.sh
configs/supervisor/: edm-download.conf  edm-download.sh  edm-hydrate.conf  edm-hydrate.sh  edm-infer.conf  edm-infer.sh  edm-models.conf  edm-models.sh  edm-prepare.conf  edm-prepare.sh  edm-preprocess.conf  edm-preprocess.sh  edm-publish.conf  edm-publish.sh  edm-train-full.conf  edm-train-full.sh  edm-train-smoke.conf  edm-train-smoke.sh
docs/: FILE_GUIDE.docx  FILE_GUIDE.md  SERVER_HANDOFF_2026-07-17.md
music_pipeline/: __init__.py  common.py
scripts/: __init__.py  analyze_mir.py  annotate_openrouter.py  audit_hydration.py  build_acestep_dataset.py  canonicalize.py  detect_lyrics.py  fingerprint.py  infer_adapter.py  process_vocals.py  publish_adapter.py  select_training_audio.py  separate_vocals.py  split_preprocess.py  validate_dataset.py
tests/: test_dataset.py  test_fingerprint.py  test_hydration_audit.py  test_musiccrawl.py
tools/: local_socks5_proxy.py
