[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "musiccrawl"
version = "0.3.0"
description = "Metadata-first YouTube music catalog and binary taste-selection CLI"
requires-python = ">=3.10"
dependencies = ["yt-dlp>=2025.1.0"]

[project.optional-dependencies]
pipeline = [
  "librosa>=0.11.0",
  "numpy>=1.26.0",
  "soundfile>=0.12.1"
]
gpu = [
  "demucs>=4.0.1",
  "faster-whisper>=1.1.0"
]
publish = ["huggingface-hub>=0.34.0"]
test = ["pytest>=8.0.0"]

[project.scripts]
musiccrawl = "musiccrawl:main"

[tool.setuptools]
py-modules = ["musiccrawl"]
packages = ["music_pipeline", "scripts"]
